brat/test/golden/error/portpull.brat.golden
Error in test/golden/error/portpull.brat on line 6:
id2 = x,y => (id, id)(z:x, y)
                     ^^^^^^^^

  Port not found: z in (0 :: Nat, 0 :: Nat)

